# Javideo

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  uno.config.ts  vite.config.ts
scripts/: build-worker.sh  cargo-msvc.bat  make-portable.sh  msvc-env.bat  tauri-build.bat  tauri-dev.bat
src/: App.vue  main.ts  shims.d.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: worker.ts
src/components/: LibraryEditDialog.vue  MagnetList.vue  MovieCard.vue  MovieDetailDrawer.vue  Pagination.vue  SettingSection.vue  Toast.vue
src/layouts/: MainLayout.vue
src/router/: index.ts
src/stores/: favorites.ts  libraries.ts  search.ts  settings.ts
src/types/: index.ts
src/utils/: clickOutside.ts  confirm.ts  i18n.ts  pickFolder.ts  theme.ts  toast.ts
src/views/: ActorDetailView.vue  ActorsView.vue  FavoritesView.vue  LibraryView.vue  SearchView.vue  SettingsView.vue  TagDetailView.vue  TagsView.vue
worker/: Javideo.Worker.csproj  Program.cs  appsettings.json
worker/Db/: DbConnectionFactory.cs  DbInitializer.cs
worker/Endpoints/: ActorEndpoints.cs  BackupEndpoints.cs  FavoriteEndpoints.cs  HealthEndpoints.cs  LibraryEndpoints.cs  MagnetEndpoints.cs  MetaTubeEndpoints.cs  MovieEndpoints.cs  ScanEndpoints.cs  SettingsEndpoints.cs  TagEndpoints.cs  TranslateEndpoints.cs
worker/Magnet/: BtdigSource.cs  HtmlMagnetSourceBase.cs  IMagnetSource.cs  MagnetService.cs  NyaaSource.cs  PollackSource.cs  (+1 more)
(+15 files in other folders)
